--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
     </header>
   </section>
 
-  <script src="./data/lol/lol.js"></script>
+  <!-- <script src="./data/lol/lol.js"></script> -->
   <script src="data.js"></script>
   <script src="main.js"></script>
 </body>
