--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,7 @@
       <!-- Contenido del modal -->
       <div class="modal-content">
         <span class="close" id="close-fun">x</span>
-        <canvas class="my-chart" width="400" height="400"></canvas>
-
         <div id="printModal">
-
         </div>
       </div>
     </div>
@@ -110,8 +107,9 @@
   <!-- <script src="./data/lol/lol.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"> </script>
   <script src="data.js"></script>
+  <script src="chart.js"></script>
   <script src="main.js"></script>
-  <script src="graphics.js"></script>
+
 </body>
 
 </html>
