--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="style.css" />
   <!--imagen para pestaña-->
   <link rel="icon" href="imagenes/favicon.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 
 <body>
